renamed 'telephone' and 'comments' to 'category' and 'last RG event' respectively

--- a/alex/members.html
+++ b/alex/members.html
@@ -99,19 +99,19 @@ Get free or discounted membership to British Cycling<BR>Get preferential rates f
 </tr>
 <tr>
  <td valign="top">
-  <label for="telephone">Catagory (u16, 16-40, 40+)</label>
+  <label for="cat">Catagory (u16, 16-40, 40+)</label>
  </td>
  <td valign="top">
-  <input  type="text" name="telephone" maxlength="30" size="30">
+  <input  type="text" name="cat" maxlength="30" size="30">
  </td>
 
 </tr>
 <tr>
  <td valign="top">
-  <label for="comments">Last RG Event attended *</label>
+  <label for="last_event">Last RG Event attended *</label>
  </td>
  <td valign="top">
-  <textarea  name="comments" maxlength="1000" cols="25" rows="6"></textarea>
+  <textarea  name="last_event" maxlength="1000" cols="25" rows="6"></textarea>
  </td>
 
 </tr>
