made last_event a text input box rather than a textarea

--- a/alex/members.html
+++ b/alex/members.html
@@ -111,7 +111,8 @@ Get free or discounted membership to British Cycling<BR>Get preferential rates f
   <label for="last_event">Last RG Event attended *</label>
  </td>
  <td valign="top">
-  <textarea  name="last_event" maxlength="1000" cols="25" rows="6"></textarea>
+  <input type="text" name="last_event" maxlength="80" size="30"
+<!--  <textarea  name="last_event" maxlength="1000" cols="25" rows="6"></textarea> -->
  </td>
 
 </tr>
